langtools/test/tools/javac/T4093617/T4093617.out
T4093617.java:12:16: compiler.err.no.superclass: java.lang.Object
1 error
